Fix overflow+update SneshLib

--- a/css/todoist_less.user.css
+++ b/css/todoist_less.user.css
@@ -16,18 +16,16 @@
 ==/UserStyle== */
 @-moz-document domain("app.todoist.com") {
 
-	/*ANCHOR [SNESHLIB - Start] */
-	
+	/*SECTION [SNESHLIB - Start] */
 	/*ANCHOR [VARIABLES]*/
-
 	@hap				: url('https://github.com/senshastic/sneshGPT/blob/main/assets/Hap.png?raw=true');
 	@borderRadius		: 12px;
 	@creamColor			: #d0b575;
-	
-	
-	
+	@creamColorMuted	: #4f4733;
+
+
+
 	/*ANCHOR [DETACHED RULESETS] */
-	
 	@gradientBackground: {
 		background: linear-gradient(109.6deg, @gradcolor3 0%, @gradcolor4 25%, @gradcolor1 50%, @gradcolor2 100%);
 	}
@@ -43,7 +41,7 @@
 			background-position: 0% 0%;
 		}
 	}
-	
+
 	@buttons: {
 		background-color: rgba(5, 5, 5, .18) !important;
 		border-radius: 12px !important;
@@ -52,7 +50,7 @@
 		-webkit-backdrop-filter: blur(100px);
 		transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 	}
-	
+
 	@buttonsHover: {
 		background-color: rgba(5, 5, 5, 0) !important;
 		border-radius: 12px;
@@ -62,7 +60,7 @@
 		transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 		transform: translateY(-4px);
 	}
-	
+
 	@transparentButtons: {
 		border-radius: 12px !important;
 		box-shadow: 0 8px 15px rgba(0, 0, 0, 0.37);
@@ -70,7 +68,15 @@
 		-webkit-backdrop-filter: blur(100px);
 		transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 	}
-	
+
+	@buttonsFlat: {
+		border-radius: 12px !important;
+		backdrop-filter: blur(100px) saturate(110%);
+		-webkit-backdrop-filter: blur(100px);
+		transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+	}
+
+
 	@transparentButtonsHover: {
 		border-radius: 12px;
 		box-shadow: 0 8px 15px rgba(0, 0, 0, 0.37);
@@ -79,8 +85,8 @@
 		transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 		transform: translateY(-4px);
 	}
-	
-	
+
+
 	@buttonsHoverWhite: {
 		background-color: rgba(5, 5, 5, 0) !important;
 		border-radius: 12px;
@@ -90,7 +96,7 @@
 		transform: translateY(-4px);
 		transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out, transform box-shadow 0.3s ease-in-out;
 	}
-	
+
 	@menuItemHover: {
 		border: 1px solid rgba(0, 204, 255, 0.6);
 		background-color: rgba(5, 5, 5, 0.35) !important;
@@ -99,7 +105,7 @@
 		transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
 		border-radius: 12px;
 	}
-	
+
 	@grainyTexture: {
 		content: "" !important;
 		position: absolute !important;
@@ -109,10 +115,10 @@
 		height: 100% !important;
 		pointer-events: none !important;
 		z-index: 0 !important;
-		background: url("https://grainy-gradients.vercel.app/noise.svg") repeat !important;
+		background: url("https://raw.githubusercontent.com/senshastic/sensha-betterer-todoist/refs/heads/main/assets/noise.svg") repeat !important;
 		opacity: 0.23 !important;
 	}
-	
+
 	@backdrop: {
 		background-color: rgba(5, 5, 5, .18) !important;
 		border-radius: 12px;
@@ -122,41 +128,95 @@
 		transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 		padding: 5px;
 	}
-	
+
 	@disappear: {
 		background: transparent !important;
 		border: 0px;
 		box-shadow: none;
 	}
-	
+
 	@transparent: {
 		background: transparent;
 	}
-	
+
 	@noise: {
 		content: "" !important;
-		background: url("https://grainy-gradients.vercel.app/noise.svg") repeat !important;
+		background: url("https://raw.githubusercontent.com/senshastic/sensha-betterer-todoist/refs/heads/main/assets/noise.svg") repeat !important;
 		background-attachment: fixed;
-		background-repeat    : no-repeat;
+		background-repeat: no-repeat;
 		background-size: cover;
-		position: absolute;
-        overflow: hidden;
+		position: fixed;
 		top: 0 !important;
 		left: 0 !important;
 		width: 100% !important;
 		height: 100% !important;
 		pointer-events: none !important;
-		z-index: 0 !important;
+		z-index: -1 !important;
 		opacity: 0.23 !important;
 	}
 
+
+	@boxShadowHover: {
+		box-shadow: 0 0px 10px rgba(0, 204, 255, 0.6);
+		background-color: rgba(0, 81, 255, 0.1);
+	}
+	
+	/* ANCHOR [ANIMATIONS] */ 
+	
 	@hoverChannelSlide: {
 		margin-left: 10px !important;
 		transition: margin-left 0.2s ease;
 		background-color: transparent;
-	 }
+	}
+	
+	/* Snake */ 
+	
+	@snakeTarget: {
+		position: relative;
+		padding: 16px;
+		border-radius: 18px;
+		background: rgba(0, 0, 0, 0.7);
+		z-index: 1;
+		overflow: hidden;
+	}
+	
+	
+	@snakeBefore: {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		border-radius: inherit;
+		padding: 3px;
+		background: linear-gradient(90deg, transparent 0%, transparent 40%, white 50%, transparent 60%, transparent 100%);
+		background-size: 200% 200%;
+		animation: smoothSnakeLine 6s linear infinite;
+		-webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+		mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+		-webkit-mask-composite: xor;
+		mask-composite: exclude;
+		z-index: -1;
+	}
+	
+	@keyframes smoothSnakeLine {
+		0% {
+			background-position: 0% 50%;
+		}
+		100% {
+			background-position: 200% 50%;
+		}
+	}
 
-	/*ANCHOR [SNESHLIB - End]*/
+	/*!SECTION [SNESHLIB - End]*/
+	
+	/*ANCHOR [ROOT] */
+	
+	:root {
+		--product-library-divider-primary: @creamColorMuted !important;
+	}
+	
 
 	/* Transition effect on hover for specific class */
 	.CyYcjJUieBpMa9EpeaMCgT06VDxGmHUC {
@@ -207,12 +267,6 @@
 		background-color: @gradcolor3 !important;
 	}
 	
-	/* NOTE [This is why no scroll] */
-	
-	._zbmK5I,
-	main {
-		overflow: hidden !important;
-	}
 
 	main::before when (@grain =1) {
 		@noise();
@@ -433,4 +487,16 @@
 	.LII_q7R, .LII_q7R svg {
 		background-color: rgba(0, 204, 255, 0) !important;
 	}
+	
+	.fwBw5Mb.H_7Dz2n {
+		border: none !important;
+	}
+	
+	
+	.task_list_item{
+		border-bottom:0.5px solid @creamColorMuted !important;
+		margin-top: 3px;
+	}
+	
 }
+
